Convert EndpointMap to not require per-service VIP parameters
Currently we have a hard-coded set of per-service parameters, which
will cause problems for custom roles and full composability.

As a first step towards making this more configurable, remove the
hard-coded per-service parameters from overcloud.yaml, and adjust
the EndpointMap generation to instead accept two mappings, the
ServiceNetMap and a mapping of networks to IPs (effectively this
just moves the map lookup inside the endpoint map instead of
inside overcloud.yaml)

Change-Id: Ib522e89c36eed2115a6586dd5a6770907d9b33db
Partially-Implements: blueprint custom-roles

--- a/network/endpoints/endpoint_data.yaml
+++ b/network/endpoints/endpoint_data.yaml
@@ -3,46 +3,46 @@
 
 Aodh:
     Internal:
-        vip_param: AodhApi
+        net_param: AodhApi
     Public:
-        vip_param: Public
+        net_param: Public
     Admin:
-        vip_param: AodhApi
+        net_param: AodhApi
     port: 8042
 
 Ceilometer:
     Internal:
-        vip_param: CeilometerApi
+        net_param: CeilometerApi
     Public:
-        vip_param: Public
+        net_param: Public
     Admin:
-        vip_param: CeilometerApi
+        net_param: CeilometerApi
     port: 8777
 
 Gnocchi:
     Internal:
-        vip_param: GnocchiApi
+        net_param: GnocchiApi
     Public:
-        vip_param: Public
+        net_param: Public
     Admin:
-        vip_param: GnocchiApi
+        net_param: GnocchiApi
     port: 8041
 
 Cinder:
     Internal:
-        vip_param: CinderApi
+        net_param: CinderApi
         uri_suffixes:
             '': /v1/%(tenant_id)s
             V2: /v2/%(tenant_id)s
             V3: /v3/%(tenant_id)s
     Public:
-        vip_param: Public
+        net_param: Public
         uri_suffixes:
             '': /v1/%(tenant_id)s
             V2: /v2/%(tenant_id)s
             V3: /v3/%(tenant_id)s
     Admin:
-        vip_param: CinderApi
+        net_param: CinderApi
         uri_suffixes:
             '': /v1/%(tenant_id)s
             V2: /v2/%(tenant_id)s
@@ -51,63 +51,57 @@ Cinder:
 
 Glance:
     Internal:
-        vip_param: GlanceApi
+        net_param: GlanceApi
     Public:
-        vip_param: Public
+        net_param: Public
     Admin:
-        vip_param: GlanceApi
+        net_param: GlanceApi
     port: 9292
 
 GlanceRegistry:
     Internal:
-        vip_param: GlanceRegistry
+        net_param: GlanceRegistry
     port: 9191
 
 Mysql:
     Internal:
-        vip_param: Mysql
-    protocol: mysql+pymysql
-    port: 3306
-
-MysqlNoBrackets:
-    Internal:
-        vip_param: MysqlNoBrackets
+        net_param: Mysql
     protocol: mysql+pymysql
     port: 3306
 
 Heat:
     Internal:
-        vip_param: HeatApi
+        net_param: HeatApi
         uri_suffixes:
             '': /v1/%(tenant_id)s
     Public:
-        vip_param: Public
+        net_param: Public
         uri_suffixes:
             '': /v1/%(tenant_id)s
     Admin:
-        vip_param: HeatApi
+        net_param: HeatApi
         uri_suffixes:
             '': /v1/%(tenant_id)s
     port: 8004
 
 HeatCfn:
     Internal:
-        vip_param: HeatApi
+        net_param: HeatApi
         uri_suffixes:
             '': /v1
     Public:
-        vip_param: Public
+        net_param: Public
         uri_suffixes:
             '': /v1
     Admin:
-        vip_param: HeatApi
+        net_param: HeatApi
         uri_suffixes:
             '': /v1
     port: 8000
 
 Horizon:
     Public:
-        vip_param: Public
+        net_param: Public
         uri_suffixes:
             '': /dashboard
     port: 80
@@ -116,7 +110,7 @@ Horizon:
 # Required for https://bugs.launchpad.net/puppet-nova/+bug/1542486
 Keystone:
     Internal:
-        vip_param: KeystonePublicApi
+        net_param: KeystonePublicApi
         uri_suffixes:
             '': /v2.0
             EC2: /v2.0/ec2tokens
@@ -124,12 +118,12 @@ Keystone:
         names:
             EC2: KeystoneEC2
     Public:
-        vip_param: Public
+        net_param: Public
         uri_suffixes:
             '': /v2.0
             V3: /v3
     Admin:
-        vip_param: KeystoneAdminApi
+        net_param: KeystoneAdminApi
         uri_suffixes:
             '': /v2.0
             V3: /v3
@@ -138,17 +132,17 @@ Keystone:
 
 Manila:
     Internal:
-        vip_param: ManilaApi
+        net_param: ManilaApi
         uri_suffixes:
             '': /v2/%(tenant_id)s
             V1: /v1/%(tenant_id)s
     Public:
-        vip_param: Public
+        net_param: Public
         uri_suffixes:
             '': /v2/%(tenant_id)s
             V1: /v1/%(tenant_id)s
     Admin:
-        vip_param: ManilaApi
+        net_param: ManilaApi
         uri_suffixes:
             '': /v2/%(tenant_id)s
             V1: /v1/%(tenant_id)s
@@ -156,50 +150,50 @@ Manila:
 
 Neutron:
     Internal:
-        vip_param: NeutronApi
+        net_param: NeutronApi
     Public:
-        vip_param: Public
+        net_param: Public
     Admin:
-        vip_param: NeutronApi
+        net_param: NeutronApi
     port: 9696
 
 Nova:
     Internal:
-        vip_param: NovaApi
+        net_param: NovaApi
         uri_suffixes:
             '': /v2.1
     Public:
-        vip_param: Public
+        net_param: Public
         uri_suffixes:
             '': /v2.1
     Admin:
-        vip_param: NovaApi
+        net_param: NovaApi
         uri_suffixes:
             '': /v2.1
     port: 8774
 
 NovaVNCProxy:
     Internal:
-        vip_param: NovaApi
+        net_param: NovaApi
     Public:
-        vip_param: Public
+        net_param: Public
     Admin:
-        vip_param: NovaApi
+        net_param: NovaApi
     port: 6080
 
 Swift:
     Internal:
-        vip_param: SwiftProxy
+        net_param: SwiftProxy
         uri_suffixes:
             '': /v1/AUTH_%(tenant_id)s
             S3:
     Public:
-        vip_param: Public
+        net_param: Public
         uri_suffixes:
             '': /v1/AUTH_%(tenant_id)s
             S3:
     Admin:
-        vip_param: SwiftProxy
+        net_param: SwiftProxy
         uri_suffixes:
             '':
             S3:
@@ -207,30 +201,30 @@ Swift:
 
 Sahara:
     Internal:
-        vip_param: SaharaApi
+        net_param: SaharaApi
         uri_suffixes:
             '': /v1.1/%(tenant_id)s
     Public:
-        vip_param: Public
+        net_param: Public
         uri_suffixes:
             '': /v1.1/%(tenant_id)s
     Admin:
-        vip_param: SaharaApi
+        net_param: SaharaApi
         uri_suffixes:
             '': /v1.1/%(tenant_id)s
     port: 8386
 
 Ironic:
     Internal:
-        vip_param: IronicApi
+        net_param: IronicApi
         uri_suffixes:
             '': /v1
     Public:
-        vip_param: Public
+        net_param: Public
         uri_suffixes:
             '': /v1
     Admin:
-        vip_param: IronicApi
+        net_param: IronicApi
         uri_suffixes:
             '': /v1
     port: 6385
