--- a/puppet/services/aodh-base.yaml
+++ b/puppet/services/aodh-base.yaml
@@ -85,7 +85,7 @@ outputs:
         aodh::keystone::auth::tenant: 'service'
         aodh::db::mysql::user: aodh
         aodh::db::mysql::password: {get_param: AodhPassword}
-        aodh::db::mysql::host: {get_param: [EndpointMap, MysqlNoBracketsInternal, host]}
+        aodh::db::mysql::host: {get_param: [EndpointMap, MysqlInternal, host_nobrackets]}
         aodh::db::mysql::dbname: aodh
         aodh::db::mysql::allowed_hosts:
           - '%'
