--- a/puppet/services/glance-registry.yaml
+++ b/puppet/services/glance-registry.yaml
@@ -45,7 +45,7 @@ outputs:
         glance::registry::debug: {get_param: Debug}
         glance::registry::workers: {get_param: GlanceWorkers}
         glance::db::mysql::user: glance
-        glance::db::mysql::host: {get_param: [EndpointMap, MysqlNoBracketsInternal, host]}
+        glance::db::mysql::host: {get_param: [EndpointMap, MysqlInternal, host_nobrackets]}
         glance::db::mysql::dbname: glance
         glance::db::mysql::allowed_hosts:
           - '%'
