--- a/puppet/services/ironic-base.yaml
+++ b/puppet/services/ironic-base.yaml
@@ -59,7 +59,7 @@ outputs:
         ironic::rabbit_use_ssl: {get_param: RabbitClientUseSSL}
         ironic::db::mysql::password: {get_param: IronicPassword}
         ironic::db::mysql::user: ironic
-        ironic::db::mysql::host: {get_param: [EndpointMap, MysqlNoBracketsInternal, host]}
+        ironic::db::mysql::host: {get_param: [EndpointMap, MysqlInternal, host_nobrackets]}
         ironic::db::mysql::dbname: ironic
         ironic::db::mysql::allowed_hosts:
           - '%'
