--- a/puppet/services/nova-base.yaml
+++ b/puppet/services/nova-base.yaml
@@ -70,14 +70,14 @@ outputs:
               - '/nova_api'
         nova::db::mysql::password: {get_input: nova_password}
         nova::db::mysql::user: nova
-        nova::db::mysql::host: {get_param: [EndpointMap, MysqlNoBracketsInternal, host]}
+        nova::db::mysql::host: {get_param: [EndpointMap, MysqlInternal, host_nobrackets]}
         nova::db::mysql::dbname: nova
         nova::db::mysql::allowed_hosts:
           - '%'
           - "%{hiera('mysql_bind_host')}"
         nova::db::mysql_api::password: {get_input: nova_password}
         nova::db::mysql_api::user: nova_api
-        nova::db::mysql_api::host: {get_param: [EndpointMap, MysqlNoBracketsInternal, host]}
+        nova::db::mysql_api::host: {get_param: [EndpointMap, MysqlInternal, host_nobrackets]}
         nova::db::mysql_api::dbname: nova_api
         nova::db::mysql_api::allowed_hosts:
           - '%'
@@ -96,13 +96,13 @@ outputs:
         nova::notification_driver: messagingv2
         nova::network::neutron::neutron_auth_type: 'v3password'
         nova::db::mysql::user: nova
-        nova::db::mysql::host: {get_param: [EndpointMap, MysqlNoBracketsInternal, host]}
+        nova::db::mysql::host: {get_param: [EndpointMap, MysqlInternal, host_nobrackets]}
         nova::db::mysql::dbname: nova
         nova::db::mysql::allowed_hosts:
           - '%'
           - "%{hiera('mysql_bind_host')}"
         nova::db::mysql_api::user: nova_api
-        nova::db::mysql_api::host: {get_param: [EndpointMap, MysqlNoBracketsInternal, host]}
+        nova::db::mysql_api::host: {get_param: [EndpointMap, MysqlInternal, host_nobrackets]}
         nova::db::mysql_api::dbname: nova_api
         nova::db::mysql_api::allowed_hosts:
           - '%'
