--- a/puppet/services/sahara-base.yaml
+++ b/puppet/services/sahara-base.yaml
@@ -53,7 +53,7 @@ outputs:
               - '/sahara'
         sahara::db::mysql::password: {get_param: SaharaPassword}
         sahara::db::mysql::user: sahara
-        sahara::db::mysql::host: {get_param: [EndpointMap, MysqlNoBracketsInternal, host]}
+        sahara::db::mysql::host: {get_param: [EndpointMap, MysqlInternal, host_nobrackets]}
         sahara::db::mysql::dbname: sahara
         sahara::db::mysql::allowed_hosts:
           - '%'
