--- a/puppet/services/manila-base.yaml
+++ b/puppet/services/manila-base.yaml
@@ -93,7 +93,7 @@ outputs:
         manila::rabbit_port: {get_param: RabbitClientPort}
         manila::debug: {get_param: Debug}
         manila::db::mysql::user: manila
-        manila::db::mysql::host: {get_param: [EndpointMap, MysqlNoBracketsInternal, host]}
+        manila::db::mysql::host: {get_param: [EndpointMap, MysqlInternal, host_nobrackets]}
         manila::db::mysql::dbname: manila
         manila::db::database_db_max_retries: -1
         manila::db::database_max_retries: -1
