--- a/puppet/services/neutron-server.yaml
+++ b/puppet/services/neutron-server.yaml
@@ -82,7 +82,7 @@ outputs:
             neutron::server::sync_db: true
             neutron::db::mysql::password: {get_param: NeutronPassword}
             neutron::db::mysql::user: neutron
-            neutron::db::mysql::host: {get_param: [EndpointMap, MysqlNoBracketsInternal, host]}
+            neutron::db::mysql::host: {get_param: [EndpointMap, MysqlInternal, host_nobrackets]}
             neutron::db::mysql::dbname: ovs_neutron
             neutron::db::mysql::allowed_hosts:
               - '%'
