Remove ::nova::cron::archive_deleted_rows
::nova::cron::archive_deleted_rows is not called in puppet-tripleo Nova
API profile.

Change-Id: Idc343e481ca04b404be5311b2908f016e4517aad
Depends-On: I7035f7998c11dc5508dae8c1a750b93c2944b2d4

--- a/puppet/services/nova-api.yaml
+++ b/puppet/services/nova-api.yaml
@@ -26,6 +26,8 @@ outputs:
         map_merge:
           - get_attr: [NovaBase, role_data, config_settings]
           - nova::api::osapi_compute_workers: {get_param: NovaWorkers}
-          - nova::api::metadata_workers: {get_param: NovaWorkers}
+            nova::api::metadata_workers: {get_param: NovaWorkers}
+            nova::cron::archive_deleted_rows::hour: '"*/12"'
+            nova::cron::archive_deleted_rows::destination: '"/dev/null"'
       step_config: |
         include tripleo::profile::base::nova::api
