Customize vcpu_pin_set in nova.conf
Allow the operator to customize the vcpu_pin_set configuration
in nova.conf

Implements: blueprint tripleo-ovs-dpdk

Change-Id: I7c76a303f4736a4439fa15c5641e576140f1c7b6
Signed-off-by: karthik s <ksundara@redhat.com>

--- a/puppet/services/nova-compute.yaml
+++ b/puppet/services/nova-compute.yaml
@@ -40,7 +40,13 @@ parameters:
     default: ''
     description: Libvirt VIF driver configuration for the network
     type: string
-
+  NovaVcpuPinSet:
+    description: >
+      A list or range of physical CPU cores to reserve for virtual machine
+      processes.
+      Ex. NovaVcpuPinSet: ['4-12','^8'] will reserve cores from 4-12 excluding 8
+    type: comma_delimited_list
+    default: []
 resources:
   NovaBase:
     type: ./nova-base.yaml
@@ -58,6 +64,7 @@ outputs:
         map_merge:
           - get_attr: [NovaBase, role_data, config_settings]
           - nova::compute::libvirt::manage_libvirt_services: false
+            nova::compute::vcpu_pin_set: {get_param: NovaVcpuPinSet}
             # we manage migration in nova common puppet profile
             nova::compute::libvirt::migration_support: false
             tripleo::profile::base::nova::manage_migration: true
