--- a/puppet/services/gnocchi-base.yaml
+++ b/puppet/services/gnocchi-base.yaml
@@ -55,7 +55,7 @@ outputs:
         gnocchi::keystone::auth::tenant: 'service'
         gnocchi::keystone::auth::password: {get_param: GnocchiPassword}
         gnocchi::db::mysql::password: {get_param: GnocchiPassword}
-        gnocchi::db::sync::extra_opts: '--skip-storage'
+        gnocchi::db::sync::extra_opts: '--skip-storage --create-legacy-resource-types'
         #Gnocchi API
         tripleo::profile::base::gnocchi::api::gnocchi_backend: {get_param: GnocchiBackend}
         gnocchi::api::manage_service: false
