--- a/environments/puppet-tenant-vlan.yaml
+++ b/environments/puppet-tenant-vlan.yaml
@@ -1,4 +1,4 @@
 parameter_defaults:
   NeutronNetworkType: vlan
-  NeutronEnableTunnelling: false
+  NeutronTunnelTypes: ''
   NeutronNetworkVLANRanges: datacentre:1:1000
