--- a/puppet/services/gnocchi-base.yaml
+++ b/puppet/services/gnocchi-base.yaml
@@ -72,10 +72,10 @@ outputs:
         gnocchi::storage::ceph::ceph_keyring:
           list_join:
           - '.'
-          - - '/etc/ceph/ceph/'
-            - 'client/'
+          - - '/etc/ceph/ceph'
+            - 'client'
             - {get_param: CephClientUserName}
-            - '/keyring'
+            - 'keyring'
         #Gnocchi statsd
         gnocchi::statsd::manage_service: false
         gnocchi::statsd::resource_id: '0a8b55df-f90f-491c-8cb9-7cdecec6fc26'
