Fix KeystoneWorkers default value
The current default doesn't get expanded to its real value correctly,
the new one should work better, it's according to hiera docs:

https://docs.puppet.com/hiera/3.2/variables.html

Change-Id: I8d1df131d2f1eee4ae0f725358d33a3ecfa3175a

--- a/puppet/services/keystone.yaml
+++ b/puppet/services/keystone.yaml
@@ -87,7 +87,7 @@ parameters:
   KeystoneWorkers:
     type: string
     description: Set the number of workers for keystone::wsgi::apache
-    default: '$::processorcount'
+    default: '"%{::processorcount}"'
 outputs:
   role_data:
     description: Role data for the Keystone role.
