--- a/puppet/services/nova-scheduler.yaml
+++ b/puppet/services/nova-scheduler.yaml
@@ -9,6 +9,10 @@ parameters:
     description: Mapping of service endpoint -> protocol. Typically set
                  via parameter_defaults in the resource registry.
     type: json
+  NovaSchedulerAvailableFilters:
+    default: []
+    description: List of scheduler available filters
+    type: comma_delimited_list
 
 resources:
   NovaBase:
@@ -25,5 +29,6 @@ outputs:
         map_merge:
           - get_attr: [NovaBase, role_data, config_settings]
           - nova::scheduler::filter::ram_allocation_ratio: '1.0'
+            nova::scheduler::filter::scheduler_available_filters: {get_param: NovaSchedulerAvailableFilters}
       step_config: |
         include tripleo::profile::base::nova::scheduler
