--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -485,7 +485,7 @@ resources:
         upgrade_level_nova_compute: {get_param: UpgradeLevelNovaCompute}
         ceilometer_metering_secret: {get_param: CeilometerMeteringSecret}
         ceilometer_password: {get_param: CeilometerPassword}
-        ceilometer_agent_auth_url: {get_param: [EndpointMap, KeystoneInternal, uri]}
+        ceilometer_agent_auth_url: {get_param: [EndpointMap, KeystoneInternal, uri_no_suffix]}
         glance_api_servers: {get_param: [EndpointMap, GlanceInternal, uri]}
         neutron_local_ip: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, NeutronTenantNetwork]}]}
         neutron_password: {get_param: NeutronPassword}
