Fix ceilometer auth url for compute
Due to a recent change introduced in puppet ceilometer[1]
ceilometer auth type defaults to password type and v2
auth_url doesnt work with domain. This fixes the url to
not include suffix.

[1] https://review.openstack.org/#/c/320454/

Change-Id: Ib88c3b17cb7eb11bec1e3b621fdb859834d3603a
(cherry picked from commit 7d64828ff2a05be8b0e175bcc79df21d08e4cf2a)

--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -608,7 +608,7 @@ resources:
         ceilometer_metering_secret: {get_param: CeilometerMeteringSecret}
         ceilometer_password: {get_param: CeilometerPassword}
         ceilometer_compute_agent: {get_param: CeilometerComputeAgent}
-        ceilometer_agent_auth_url: {get_param: [EndpointMap, KeystoneInternal, uri]}
+        ceilometer_agent_auth_url: {get_param: [EndpointMap, KeystoneInternal, uri_no_suffix]}
         snmpd_readonly_user_name: {get_param: SnmpdReadonlyUserName}
         snmpd_readonly_user_password: {get_param: SnmpdReadonlyUserPassword}
         glance_api_servers: {get_param: [EndpointMap, GlanceInternal, uri]}
