Cleanup templates from the shared CephCluster config
Removes from the templates the old CephCluster configuration and
deployment which before roles was distributing the shared settings
for the Ceph cluster configuration.

Change-Id: Ia704f5d7add85e52dd477f4bc758aa0a02e4b39b

--- a/puppet/services/nova-compute.yaml
+++ b/puppet/services/nova-compute.yaml
@@ -9,6 +9,12 @@ parameters:
     description: Mapping of service endpoint -> protocol. Typically set
                  via parameter_defaults in the resource registry.
     type: json
+  NovaRbdPoolName:
+    default: vms
+    type: string
+  CephClientUserName:
+    default: openstack
+    type: string
 
 resources:
   NovaBase:
@@ -29,6 +35,13 @@ outputs:
             nova::compute::libvirt::migration_support: false
             tripleo::profile::base::nova::manage_migration: true
             tripleo::profile::base::nova::nova_compute_enabled: true
+            nova::compute::rbd::libvirt_images_rbd_pool: {get_param: NovaRbdPoolName}
+            nova::compute::rbd::libvirt_rbd_user: {get_param: CephClientUserName}
+            nova::compute::rbd::rbd_keyring:
+              list_join:
+              - '.'
+              - - 'client'
+                - {get_param: CephClientUserName}
       step_config: |
         # TODO(emilien): figure how to deal with libvirt profile.
         # We'll probably threat it like we do with Neutron plugins.
