Add sriov_numvfs in THT
Allow the operator to configure sriov_numvfs for each of the
required SR-IOV interfaces.

Depends-On: I2c1fce461d4602cd9f7de44b34e94920d1a581a6
Change-Id: I56b7ae268535a8e423e65e8f1b99763c44d99eca
implements: blueprint tripleo-sriov
Signed-off-by: karthik s <ksundara@redhat.com>

--- a/puppet/services/neutron-sriov-agent.yaml
+++ b/puppet/services/neutron-sriov-agent.yaml
@@ -32,6 +32,13 @@ parameters:
       physical_device_mappings list.
     type: comma_delimited_list
     default: ""
+  NeutronSriovNumVFs:
+    description: >
+      Provide the list of VFs to be reserved for each SR-IOV interface.
+      Format "<interface_name1>:<numvfs1>","<interface_name2>:<numvfs2>"
+      Example "eth1:4096","eth2:128"
+    type: comma_delimited_list
+    default: ""
   EndpointMap:
     default: {}
     description: Mapping of service endpoint -> protocol. Typically set
@@ -46,5 +53,6 @@ outputs:
       config_settings:
         neutron::agents::ml2::sriov::physical_device_mappings: {get_param: NeutronPhysicalDevMappings}
         neutron::agents::ml2::sriov::exclude_devices: {get_param: NeutronExcludeDevices}
+        neutron::agents::ml2::sriov::number_of_vfs: {get_param: NeutronSriovNumVFs}
       step_config: |
         include ::tripleo::profile::base::neutron::sriov
